[gd_scene load_steps=11 format=2]

[ext_resource path="res://Touch Area File/TouchArea.tscn" type="PackedScene" id=1]
[ext_resource path="res://Main.gd" type="Script" id=2]
[ext_resource path="res://Script/DrawMousePath.gd" type="Script" id=3]
[ext_resource path="res://Script/DisplayWord.gd" type="Script" id=4]
[ext_resource path="res://Fonts/Xolonium-Regular.ttf" type="DynamicFontData" id=5]
[ext_resource path="res://Script/VocabularyContainers.gd" type="Script" id=6]
[ext_resource path="res://Script/VocabLabel.gd" type="Script" id=7]
[ext_resource path="res://Level/LevelControl.tscn" type="PackedScene" id=8]

[sub_resource type="DynamicFont" id=1]
size = 32
outline_size = 2
outline_color = Color( 0, 0, 0, 1 )
font_data = ExtResource( 5 )

[sub_resource type="DynamicFont" id=2]
size = 64
outline_size = 2
outline_color = Color( 0, 0, 0, 1 )
font_data = ExtResource( 5 )

[node name="Main" type="Node"]
script = ExtResource( 2 )

[node name="TouchArea" parent="." instance=ExtResource( 1 )]

[node name="DrawMousePath" type="Line2D" parent="."]
width = 5.0
script = ExtResource( 3 )

[node name="DisplayLabel" type="Label" parent="."]
anchor_right = 1.0
margin_bottom = 39.0
custom_fonts/font = SubResource( 1 )
text = "Test"
align = 1
valign = 1
script = ExtResource( 4 )

[node name="VocabContainers" type="Node" parent="."]
script = ExtResource( 6 )

[node name="VocabLabel" type="Label" parent="."]
anchor_left = 1.0
anchor_right = 1.0
margin_left = -40.0
margin_bottom = 39.0
grow_horizontal = 0
custom_fonts/font = SubResource( 1 )
align = 2
valign = 1
script = ExtResource( 7 )

[node name="LevelControl" parent="." instance=ExtResource( 8 )]

[node name="RestartButton" type="Button" parent="."]
visible = false
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = -140.0
margin_top = -84.0
custom_fonts/font = SubResource( 2 )
text = "Exit"

[connection signal="chosen_level" from="LevelControl" to="." method="_on_LevelControl_chosen_level"]
[connection signal="pressed" from="RestartButton" to="." method="_on_RestartButton_pressed"]
